# CQS

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  batch.sh  docker-compose-up.sh  docker-compose.sh  docker-compose.yaml  main.sh  pull_paths.sh  release.sh  sample_input.json  sample_input_async.json  time.sh
docs/: cqs-0.2.0.tgz  cqs-0.2.1.tgz  cqs-0.2.10.tgz  cqs-0.2.11.tgz  cqs-0.2.12.tgz  cqs-0.2.13.tgz  cqs-0.2.14.tgz  cqs-0.2.15.tgz  cqs-0.2.16.tgz  cqs-0.2.17.tgz  cqs-0.2.18.tgz  cqs-0.2.19.tgz  cqs-0.2.2.tgz  cqs-0.2.3.tgz  cqs-0.2.4.tgz  cqs-0.2.5.tgz  cqs-0.2.6.tgz  cqs-0.2.7.tgz  cqs-0.2.8.tgz  cqs-0.2.9.tgz  cqs-0.3.0.tgz  cqs-0.3.1.tgz  cqs-0.3.10.tgz  cqs-0.3.11.tgz  cqs-0.3.12.tgz  cqs-0.3.13.tgz  cqs-0.3.14.tgz  cqs-0.3.15.tgz  cqs-0.3.16.tgz  cqs-0.3.17.tgz  cqs-0.3.18.tgz  cqs-0.3.19.tgz  cqs-0.3.2.tgz  cqs-0.3.3.tgz  cqs-0.3.4.tgz  cqs-0.3.5.tgz  cqs-0.3.6.tgz  cqs-0.3.7.tgz  cqs-0.3.8.tgz  cqs-0.3.9.tgz  (+2 more)
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  app-deployment.yaml  env-config-map.yaml  ingress.yaml
migrations/2023-06-20-070724_jobs/: down.sql  up.sql
migrations/2024-03-12-164621_jobs/: up.sql
paths/: README.md
paths/Path_A/: README.md
paths/Path_A/DEPRECATED/: strider_primary_ciliary_dyskinesia_path_a_response.json
paths/example-cqs-mvp-template/: example-cqs-mvp-template.json
src/: db.rs  job_actions.rs  main.rs  model.rs  openapi.rs  schema.rs  scoring.rs  template.rs  util.rs
src/data/: mvp1-template1-clinical-kps.json  mvp1-template3-openpredict.json  mvp1-template4-bte-aeolus.json  mvp1-template5-service-provider-aeolus.json  path_a.template.json  path_b.template.json  path_c.template.json  path_d.template.json  path_e.template.json
templates/: README.md  mcq-template
templates/example-cqs-mvp-template/: README.md  example-cqs-mvp-template.json
templates/mvp1-template-connections-hypothesis/: README.md
templates/mvp1-template1-clinical-kps/DEPRECATED/: strider_idiopathic_pulmonary_fibrosis_path_a_response_12.06.2023b.json
templates/mvp1-templates/: README.md
templates/mvp1-templates/mvp-template-12-multiomics-drugapprovals-faers/: mvp-template-12-multiomics-drugapprovals-faers.json
templates/mvp1-templates/mvp-template11-multiomics-ctkp/: README.md  mvp1-template11-multiomics-ctkp.json
templates/mvp1-templates/mvp1-template1-clinical-kps/: README.md  mvp1-template1-clinical-kps.json
templates/mvp1-templates/mvp1-template10-service-provider-tmkp-targeted/: README.md  mvp1-template10-service-provider-tmkp-targeted.json
templates/mvp1-templates/mvp1-template3-openpredict/: mvp1-template3-openpredict.json
templates/mvp1-templates/mvp1-template4-bte-aeolus/: mvp1-template4-bte-aeolus.json  mvp1-template5-service-provider-aeolus.json
templates/mvp1-templates/mvp1-template4-service-provider-aeolus/: mvp1-template4-service-provider-aeolus.json
templates/mvp1-templates/mvp1-template5-service-provider-tmkp-targeted/: mvp1-template5-service-provider-tmkp-targeted.json
templates/mvp1-templates/mvp1-template5-spoke-chembl/: README  mvp1-template5-spoke-chembl.json  mvp1-template5-spoke-chembl.json.json
templates/mvp1-templates/mvp1-template6-molepro-chembl/: mvp1-template6-molepro-chembl.json
templates/mvp1-templates/mvp1-template7-rtxkg2-semmed/: mvp1-template7-rtxkg2-semmed.json
templates/mvp1-templates/mvp1-template8-service-provider-semmed/: mvp1-template8-service-provider-semmed.json
templates/mvp1-templates/mvp1-template8-unsecret-semmed/: mvp1-template8-unsecret-semmed.json
templates/mvp1-templates/mvp1-template9-service-provider-chembl/: mvp1-template9-service-provider-chembl.json
templates/mvp2-templates/: README.md
templates/mvp2-templates/mvp2-template1-clinical-kps-cam-kp/: README.md  mvp2-template1-clinical-kps-cam-kp.json
