[package]
name = "cqs-rs"
version = "0.2.19"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2021"
keywords = ["ARA", "curated", "query", "service"]
default-run = "cqs-rs"

[dependencies]
async_once = "0.2.6"
bb8 = "^0.8"
bb8-diesel = "^0.2"
chrono = { version = "^0.4", features = ["serde"]}
clap = { version = "^4.3", features = ["derive"] }
diesel = { version = "^2.1", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel-async = { version = "^0.4", features = ["bb8", "postgres"] }
diesel_migrations = "^2.1"
dotenvy = "^0.15"
env_logger = "^0.11"
futures = "^0.3"
hyper = { version = "^0.14", features = ["client", "http1", "stream", "tcp"] }
itertools = "^0.12"
lazy_static = "^1.4"
liquid = "^0.26"
log = { version = "^0.4", features = ["std"] }
merge-hashmap = { version = "0.1.2", features = ["default", "merge_derive-hashmap"] }
ordered-float = "^4.2"
reqwest = { version = "^0.12", features = ["default", "json"] }
rocket = { version = "^0.5.0", features = ["json", "http2"] }
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
serde = { version = "^1.0", features = ["derive", "serde_derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.9"
serde_with = { version = "^3.1", features = ["std", "macros", "json"] }
tokio = { version = "1.28.2", features = ["full"]}
trapi-model-rs = { git = "https://github.com/jdr0887/trapi-model-rs.git" }
uuid = { version = "^1.4", features = ["v4"]}
