[package]
name = "cqs-rs"
version = "0.3.18"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2021"
keywords = ["ARA", "curated", "query", "service"]
default-run = "cqs-rs"

[dependencies]
async_once = "^0.2"
bb8 = "^0.8"
bb8-diesel = "^0.2"
chrono = { version = "^0.4", features = ["serde"] }
clap = { version = "^4.5", features = ["derive"] }
diesel = { version = "^2.1", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel-async = { version = "^0.4", features = ["bb8", "postgres"] }
diesel_migrations = "^2.1"
dotenvy = "^0.15"
env_logger = "^0.11"
futures = "^0.3"
hyper = { version = "^0.14", features = ["client", "http1", "stream", "tcp"] }
itertools = "^0.13"
lazy_static = "^1.5"
log = { version = "^0.4", features = ["std"] }
merge-hashmap = { version = "^0.1", features = ["default", "merge_derive-hashmap"] }
peak_alloc = "^0.2"
rayon = "^1.10"
regex = "^1.10"
reqwest = { version = "^0.12", features = ["default", "json"] }
rocket = { version = "^0.5.0", features = ["json", "http2"] }
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
serde = { version = "^1.0", features = ["derive", "serde_derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
serde_with = { version = "^3.1", features = ["std", "macros", "json"] }
strum = "^0.26"
tokio = { version = "^1.40", features = ["full"] }
trapi-model-rs = { git = "https://github.com/jdr0887/trapi-model-rs.git" }
uuid = { version = "^1.4", features = ["v4"] }
strum_macros = "0.26.4"
